Added vector store to store past conversation, can check the logs for past conversation.

--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,20 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.agents import create_openapi_agent\n",
     "from langchain.agents.agent_toolkits import OpenAPIToolkit\n",
     "from langchain.requests import TextRequestsWrapper\n",
     "from langchain.tools.json.tool import JsonSpec\n",
-    "import json, yaml"
+    "import json, yaml\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.llms.openai import OpenAI\n",
-    "import os \n",
-    "openai_api_key = \"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\" # os.getenv(\"OPENAI_API_KEY\")\n",
+    "import os\n",
+    "\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "llm = OpenAI(openai_api_key=openai_api_key)\n",
     "from langchain.llms import OpenAI\n",
@@ -142,30 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.memory import VectorStoreRetrieverMemory\n",
-    "from langchain.vectorstores import FAISS\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "from langchain.vectorstores import Qdrant\n",
     "from langchain.docstore import InMemoryDocstore\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
-    "import faiss\n",
+    "import qdrant_client\n",
+    "from qdrant_client.models import Distance, VectorParams\n",
     "\n",
-    "# Initialize the VectorStore\n",
-    "embedding_size = 1536  # Dimensions of the OpenAIEmbeddings\n",
-    "index = faiss.IndexFlatL2(embedding_size)\n",
-    "embedding_fn = OpenAIEmbeddings(openai_api_key=openai_api_key).embed_query\n",
-    "vectorstore = FAISS(embedding_fn, index, InMemoryDocstore({}), {})\n",
+    "embeddings = OpenAIEmbeddings(openai_api_key=openai_api_key)\n",
+    "client = qdrant_client.QdrantClient(url=\"http://localhost:6333\", prefer_grpc=True)\n",
+    "client.create_collection(\"second_coll\", vectors_config=VectorParams(size=1536, distance=Distance.COSINE),)\n",
+    "vector_store = Qdrant(client, collection_name=\"second_coll\", embeddings=embeddings)\n",
+    "\n",
     "\n",
     "# Create the VectorStoreRetrieverMemory\n",
-    "retriever = vectorstore.as_retriever(search_kwargs=dict(k=1))\n",
+    "retriever = vector_store.as_retriever()\n",
     "memory = VectorStoreRetrieverMemory(retriever=retriever)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +232,7 @@
     "conversation_with_summary = ConversationChain(\n",
     "    llm=llm, \n",
     "    prompt=PROMPT,\n",
-    "    # We set a very low max_token_limit for the purposes of testing.\n",
-    "    # memory=memory,\n",
+    "    memory=memory,\n",
     "    verbose=True\n",
     ")\n",
     "json_string = conversation_with_summary.predict(input=f\"\"\"My device id is 0d1841b0976bae2a3a310dd74c0f3df354899bc8, context uri is 5ht7ItJgpBH7W6vJ5BqpPr and track id is 4iV5W9uYEdYUVa79Axb7Rh\n",
@@ -226,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
