storing the api responses as well

--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
     "    data = yaml.load(f, Loader=yaml.FullLoader)\n",
     "json_spec = JsonSpec(dict_=data, max_value_length=4000)\n",
     "\n",
-    "api_operation, method=get_api_operation_by_id(json_spec, \"start-a-users-playback\")\n",
+    "api_operation, method=get_api_operation_by_id(json_spec, \"check-users-saved-albums\")\n",
     "isolated_request = process_api_operation(method, api_operation, json_spec)\n",
     "\n",
     "if isolated_request and \"parameters\" in isolated_request:\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,12 +167,15 @@
     "from langchain.docstore import InMemoryDocstore\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "import qdrant_client\n",
+    "from uuid import uuid4\n",
     "from qdrant_client.models import Distance, VectorParams\n",
     "\n",
     "embeddings = OpenAIEmbeddings(openai_api_key=openai_api_key)\n",
     "client = qdrant_client.QdrantClient(url=\"http://localhost:6333\", prefer_grpc=True)\n",
-    "client.create_collection(\"second_coll\", vectors_config=VectorParams(size=1536, distance=Distance.COSINE),)\n",
-    "vector_store = Qdrant(client, collection_name=\"second_coll\", embeddings=embeddings)\n",
+    "temp_coll = \"second_coll\"\n",
+    "client.delete_collection(temp_coll) # just for testing or maybe even for prod!!!\n",
+    "client.create_collection(temp_coll, vectors_config=VectorParams(size=1536, distance=Distance.COSINE))\n",
+    "vector_store = Qdrant(client, collection_name=temp_coll, embeddings=embeddings)\n",
     "\n",
     "\n",
     "# Create the VectorStoreRetrieverMemory\n",
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -193,16 +196,25 @@
       "\n",
       "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mGenerate a JSON API payload using the information from previous conversation and a Swagger OpenAPI schema. Your output must be a valid json starting with ```json and ending with ```\n",
+      "\u001b[32;1m\u001b[1;3mYou are an assistant helping me build a http requests. You will be given the following pieces of information. Access to our past conversation. A user query and an excerpt from openapi swagger for generating the correct response. Your response MUST be a valid json, use query_param key to denote query parameter. Use body key to denote the body and route_parameter to denote the route params. Wrap the json inside three backticks\n",
       "\n",
-      "Relevant pieces of previous conversation:\n",
+      "Previous conversations:\n",
+      "input: I want to add album 889234ssdfa, the openapi schema is {'description': \"Check if one or more albums is already saved in the current Spotify user's 'Your Music' library.\\n\", 'operationId': 'check-users-saved-albums', 'parameters': [{'in': 'query', 'name': 'ids', 'required': True, 'schema': {'description': 'A comma-separated list of the [Spotify IDs](/documentation/web-api/concepts/spotify-uris-ids) for the albums. Maximum: 20 IDs.\\n', 'example': '382ObEPsp2rxGrnsizN5TX,1A2GTWGtFfWp7KSQTwWOyo,2noRn2Aes5aoNVsU6iWThc', 'title': 'Spotify Album IDs', 'type': 'string'}}], 'responses': {'200': {'$ref': '#/components/responses/ArrayOfBooleans'}, '401': {'$ref': '#/components/responses/Unauthorized'}, '403': {'$ref': '#/components/responses/Forbidden'}, '429': {'$ref': '#/components/responses/TooManyRequests'}}, 'security': [{'oauth_2_0': ['user-library-read']}], 'summary': \"Check User's Saved Albums\\n\", 'tags': ['Albums', 'Library'], 'x-spotify-docs-console-url': '/console/get-current-user-contains-saved-albums/?ids=0pJJgBzj26qnE1nSQUxaB0%2C5ZAKzV4ZIa5Gt7z29OYHv0', 'x-spotify-docs-endpoint-name': \"Check User's Saved Albums\"}\n",
       "\n",
+      "response: \n",
+      "\n",
+      "{\n",
+      "  \"route_parameter\": {},\n",
+      "  \"query_param\": {\n",
+      "    \"ids\": \"889234ssdfa\"\n",
+      "  },\n",
+      "  \"body\": {}\n",
+      "}\n",
       "\n",
       "(You do not need to use these pieces of information if not relevant)\n",
       "\n",
-      "Current conversation:\n",
-      "Human: My device id is 0d1841b0976bae2a3a310dd74c0f3df354899bc8, context uri is 5ht7ItJgpBH7W6vJ5BqpPr and track id is 4iV5W9uYEdYUVa79Axb7Rh\n",
-      "    the openapi schema is {'description': \"Start a new context or resume current playback on the user's active device.\\n\", 'operationId': 'start-a-users-playback', 'parameters': [{'in': 'query', 'name': 'device_id', 'required': False, 'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\", 'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8', 'title': 'Device ID', 'type': 'string'}}], 'requestBody': {'content': {'application/json': {'schema': {'additionalProperties': True, 'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr', 'offset': {'position': 5}, 'position_ms': 0}, 'properties': {'context_uri': {'additionalProperties': True, 'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n', 'type': 'string'}, 'offset': {'additionalProperties': True, 'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n', 'type': 'object'}, 'position_ms': {'additionalProperties': True, 'description': 'integer', 'type': 'integer'}, 'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n', 'items': {'type': 'string'}, 'type': 'array'}}, 'type': 'object'}}}}, 'responses': {'204': {'description': 'Playback started'}, '401': {'$ref': '#/components/responses/Unauthorized'}, '403': {'$ref': '#/components/responses/Forbidden'}, '429': {'$ref': '#/components/responses/TooManyRequests'}}, 'security': [{'oauth_2_0': ['user-modify-playback-state']}], 'summary': 'Start/Resume Playback\\n', 'tags': ['Player'], 'x-spotify-docs-console-url': '/console/put-play/', 'x-spotify-docs-endpoint-name': \"Start/Resume a User's Playback\", 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/playerPolicyList'}, 'request_body': {'additionalProperties': True, 'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr', 'offset': {'position': 5}, 'position_ms': 0}, 'properties': {'context_uri': {'additionalProperties': True, 'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n', 'type': 'string'}, 'offset': {'additionalProperties': True, 'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n', 'type': 'object'}, 'position_ms': {'additionalProperties': True, 'description': 'integer', 'type': 'integer'}, 'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n', 'items': {'type': 'string'}, 'type': 'array'}}, 'type': 'object'}}\n",
+      "Human Input:\n",
+      "Human: I want to add album 889234ssdfa, the openapi schema is {'description': \"Check if one or more albums is already saved in the current Spotify user's 'Your Music' library.\\n\", 'operationId': 'check-users-saved-albums', 'parameters': [{'in': 'query', 'name': 'ids', 'required': True, 'schema': {'description': 'A comma-separated list of the [Spotify IDs](/documentation/web-api/concepts/spotify-uris-ids) for the albums. Maximum: 20 IDs.\\n', 'example': '382ObEPsp2rxGrnsizN5TX,1A2GTWGtFfWp7KSQTwWOyo,2noRn2Aes5aoNVsU6iWThc', 'title': 'Spotify Album IDs', 'type': 'string'}}], 'responses': {'200': {'$ref': '#/components/responses/ArrayOfBooleans'}, '401': {'$ref': '#/components/responses/Unauthorized'}, '403': {'$ref': '#/components/responses/Forbidden'}, '429': {'$ref': '#/components/responses/TooManyRequests'}}, 'security': [{'oauth_2_0': ['user-library-read']}], 'summary': \"Check User's Saved Albums\\n\", 'tags': ['Albums', 'Library'], 'x-spotify-docs-console-url': '/console/get-current-user-contains-saved-albums/?ids=0pJJgBzj26qnE1nSQUxaB0%2C5ZAKzV4ZIa5Gt7z29OYHv0', 'x-spotify-docs-endpoint-name': \"Check User's Saved Albums\"}\n",
       "\n",
       "The API payload is: \u001b[0m\n",
       "\n",
@@ -215,14 +227,14 @@
     "\n",
     "from langchain.chains import ConversationChain\n",
     "\n",
-    "_DEFAULT_TEMPLATE = \"\"\"Generate a JSON API payload using the information from previous conversation and a Swagger OpenAPI schema. Your output must be a valid json starting with ```json and ending with ```\n",
+    "_DEFAULT_TEMPLATE = \"\"\"You are an assistant helping me build a http requests. You will be given the following pieces of information. Access to our past conversation. A user query and an excerpt from openapi swagger for generating the correct response. Your response MUST be a valid json, use query_param key to denote query parameter. Use body key to denote the body and route_parameter to denote the route params. Wrap the json inside three backticks\n",
     "\n",
-    "Relevant pieces of previous conversation:\n",
+    "Previous conversations:\n",
     "{history}\n",
     "\n",
     "(You do not need to use these pieces of information if not relevant)\n",
     "\n",
-    "Current conversation:\n",
+    "Human Input:\n",
     "Human: {input}\n",
     "The API payload is: \"\"\"\n",
     "\n",
@@ -235,14 +247,13 @@
     "    memory=memory,\n",
     "    verbose=True\n",
     ")\n",
-    "json_string = conversation_with_summary.predict(input=f\"\"\"My device id is 0d1841b0976bae2a3a310dd74c0f3df354899bc8, context uri is 5ht7ItJgpBH7W6vJ5BqpPr and track id is 4iV5W9uYEdYUVa79Axb7Rh\n",
-    "    the openapi schema is {isolated_request}\n",
+    "json_string = conversation_with_summary.predict(input=f\"\"\"I want to add album 889234ssdfa, the openapi schema is {isolated_request}\n",
     "\"\"\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,27 +276,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'device_id': '0d1841b0976bae2a3a310dd74c0f3df354899bc8',\n",
-       " 'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr',\n",
-       " 'offset': {'position': 5},\n",
-       " 'position_ms': 0,\n",
-       " 'uris': ['spotify:track:4iV5W9uYEdYUVa79Axb7Rh',\n",
-       "  'spotify:track:1301WleyT98MSxVHPZCA6M']}"
+       "{'route_parameter': {}, 'query_param': {'ids': '889234ssdfa'}, 'body': {}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "extract_json_payload(json_string)"
+    "json_string\n",
+    "\n",
+    "response = extract_json_payload(json_string)\n",
+    "vector_store.add_texts([json_string])\n",
+    "\n",
+    "response"
    ]
   },
   {
