adding mypy tool, removing redundancies

--- a/llm-server/docs/1.md
+++ b/llm-server/docs/1.md
@@ -1,42 +1,46 @@
-**Task: Execute APIs and Determine Target Group**
+## Task: Execute APIs and Determine Target Group
 
 1. **Objective**: Your main objective is to execute a sequence of APIs based on user input and determine the appropriate target group. Additionally, you need to store API responses for optimization purposes.
 
-    - **Subtask 1: Determine Target Group**
-      - **Objective**: Identify the suitable target group based on user input.
-      - **Actions**:
-        - Receive user input to determine the target group.
-        - Utilize existing agent or resources to make an informed decision.
-        - Output the chosen target group.
+   - **Subtask 1: Determine Target Group**
 
-    - **Subtask 2: Execute APIs in Sequence**
-      - **Objective**: Execute a series of APIs in the order specified by the provided JSON file.
-      - **Actions**:
-        - Receive the JSON file containing API sequences.
-        - For each API sequence:
-          - Execute APIs one by one in the given sequence.
-          - Store API responses for later use.
+     - **Objective**: Identify the suitable target group based on user input.
+     - **Actions**:
+       - Receive user input to determine the target group.
+       - Utilize existing agent or resources to make an informed decision.
+       - Output the chosen target group.
 
-    - **Subtask 3: Optimize API Responses Storage**
-      - **Objective**: Optimize the storage of API responses to enable efficient querying.
-      - **Actions**:
-        - Consider options for storing API responses: Redis, MongoDB, or vector databases.
-        - Choose a suitable storage approach that makes parsing easier (JSON data or vector database).
-        - If using vector database, utilize a distinct namespace for rapid querying.
-        - Explore the possibility of language model interaction with vector databases.
-        - Delete namespace once computations are done.
+   - **Subtask 2: Execute APIs in Sequence**
 
-    - **Subtask 4: Retain Responses Across Sequences**
-      - **Objective**: Ensure API responses are retained across different sequences.
-      - **Actions**:
-        - Design an agent responsible for managing API response data.
-        - Ensure agent can link responses to corresponding APIs and sequences.
+     - **Objective**: Execute a series of APIs in the order specified by the provided JSON file.
+     - **Actions**:
+       - Receive the JSON file containing API sequences.
+       - For each API sequence:
+         - Execute APIs one by one in the given sequence.
+         - Store API responses for later use.
 
-    - **Subtask 5: Store Relevant Logs**
-      - **Objective**: Store logs for future reference.
-      - **Actions**:
-        - Determine a suitable location for storing logs.
-        - Save relevant logs detailing the execution of APIs and other actions.
+   - **Subtask 3: Optimize API Responses Storage**
+
+     - **Objective**: Optimize the storage of API responses to enable efficient querying.
+     - **Actions**:
+       - Consider options for storing API responses: Redis, MongoDB, or vector databases.
+       - Choose a suitable storage approach that makes parsing easier (JSON data or vector database).
+       - If using vector database, utilize a distinct namespace for rapid querying.
+       - Explore the possibility of language model interaction with vector databases.
+       - Delete namespace once computations are done.
+
+   - **Subtask 4: Retain Responses Across Sequences**
+
+     - **Objective**: Ensure API responses are retained across different sequences.
+     - **Actions**:
+       - Design an agent responsible for managing API response data.
+       - Ensure agent can link responses to corresponding APIs and sequences.
+
+   - **Subtask 5: Store Relevant Logs**
+     - **Objective**: Store logs for future reference.
+     - **Actions**:
+       - Determine a suitable location for storing logs.
+       - Save relevant logs detailing the execution of APIs and other actions.
 
 2. **Conclusion**: Once the entire process is completed, you should have successfully executed APIs, determined target groups, optimized response storage, retained responses across sequences, and stored relevant logs for future reference.
 
